<resources>
    <string name="app_name">OrderFood</string>
    <string name="mo">Mở</string>
    <string name="dong">Đóng</string>
    <string name="thembanan">Thêm Bàn Ăn</string>
    <string name="themthucdon">Thêm Thực Đơn</string>
    <string name="themnhanvien">Thêm Nhân Viên</string>
    <string name="thanhcong">Thành Công</string>
    <string name="thatbai">Thất Bại</string>
    <string name="capnhat">Cập Nhật</string>
    <string name="nam">Nam</string>
    <string name="nu">Nữ</string>
    <string name="nhapthongtin">Vui lòng nhập thông tin</string>
    <string name="tongtien">Tổng tiền: </string>
    <string name="hinhthucdon">Chọn hình thực đơn</string>
    <string name="tenmonan">Tên món ăn</string>
    <string name="soluong">Số lương</string>
    <string name="giatien">Giá tiền</string>
    <string name="tendn">Tên đăng nhập</string>
    <string name="matkhau">Mật khẩu</string>
    <string name="ngaysinh">Ngày sinh</string>
    <string name="CMND">Chứng minh nhân dân</string>
    <string name="dangky">Đăng ký</string>
    <string name="trove">Trở về</string>
    <string name="dangnhap">Đăng nhập</string>
    <string name="tenbanan">Tên bàn ăn</string>
    <string name="dongy">OK</string>
    <string name="thanhtoan">Thanh Toán</string>
    <string name="tenloaithucdon">Tên loại thực đơn</string>
    <string name="sua">Sửa</string>
    <string name="xoa">Xoá</string>
    <string name="trangchu">Trang Chủ</string>
    <string name="thucdon">Thực Đơn</string>
    <string name="nhanvien">Nhân Viên</string>
    <string name="thongke">Thống Kê</string>
    <string name="caidat">Cài Đặt</string>
    <string name="dangxuat">Đăng Xuất</string>

</resources>