<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/themthucdon"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_margin="10dp"
        android:textColor="#000"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tenmonan"
                android:id="@+id/edThemTenMonAn" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/giatien"
                android:id="@+id/edThemGiaTien"
                android:inputType="number" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/spLoaiMonAn"
                    android:spinnerMode="dropdown">

                </Spinner>
                <ImageButton
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_add"
                    android:layout_weight="1"
                    android:id="@+id/imgThemLoaiThucDon"
                    android:background="@color/purple_200"/>
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/backgroundheader1"
            android:id="@+id/imgHinhThucDon"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dongy"
            android:layout_margin="10dp"
            android:background="@color/purple_200"
            android:id="@+id/btnDongYThemMonAn"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/trove"
            android:layout_margin="10dp"
            android:id="@+id/btnThoatThemMonAn"
            android:background="@color/purple_200"/>
    </LinearLayout>
</LinearLayout>